--- a/assts/asst09-1.adoc
+++ b/assts/asst09-1.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 09: Follow the thread
+:title: Assignment 09 (Part 1): Follow the thread
 :Author Initials: ASN
 :Date:    2020-08-15
 :Revision: 0.1
