--- a/assts/asst09-2.adoc
+++ b/assts/asst09-2.adoc
@@ -168,7 +168,7 @@ image:buddhabrot-2000-1650142988.png[height=400]
 
 Requirements and hints:
 
-* You should re-use your PPM and mandelbrot functions from A09. If you use a 2D array of arrays, be sure to modify and commit `read_ppm.h`!
+* You can re-use your PPM and mandelbrot functions from A09. You should re-use your implementation for read/write PPM as well.
 * Each thread should run all three steps on a quadrant of the image. 
 * You will need a `pthread_barrier_t` to wait for all counts to be computed before computing the colors
 * Notice that the range of x and y might need to be larger to see the probability distribution
