--- a/schedule.adoc
+++ b/schedule.adoc
@@ -136,7 +136,6 @@
 * Read: link:https://diveintosystems.org/singlepage/[Chapter 11.1-11.3] 
 * Read: link:https://diveintosystems.org/singlepage/[Chapter 11.5, Malloc Handout] 
 * link:assts/asst10.html[Assignment 10]: Due April 26
-* Lab: **Quiz 05**, link:studyguide5.html[Study Guide 5]
 
 //-----------------------------
 |15
@@ -144,7 +143,7 @@
 |*Code Optimization, C++* 
 
 * Read: link:https://diveintosystems.org/singlepage/[Chapter 12] 
-* Lab: **Jam 06 Study Guide** link:studyguide6.html[Study Guide 6]
+* Lab: **Quiz05**, April 24th (link:studyguide5.html[Study Guide 5], link:studyguide6.html[Study Guide 6])
 * link:studyguide-final.html[Final Study Guide]
 
 |===
