--- a/codingstandard.adoc
+++ b/codingstandard.adoc
@@ -5,7 +5,7 @@ include::header.adoc[]
 
 :course: CS223
 :title: Code Formatting Standards and Guidelines
-:term: Spring 2023
+:term: Fall 2024
 
 = {course}: {title} -- {term}
 
