--- a/labPolicy.adoc
+++ b/labPolicy.adoc
@@ -5,15 +5,14 @@ component of the class.
 
 Lab exercises will be passed out in lab. These exercises are intended to be short and 
 will typically ask you to reproduce demos from class or tackle concepts you will need 
-for your assignment. Lab execises should be handed in at the end of lab.
+for your assignment. Lab exercises should be handed in at the end of lab.
 
 Class exercises will be passed out in class. These exercises are intended to be
-short and will typically ask you to practice concepts from lecture.  Class
-execises should be handed in at the end of class.
+short and will typically ask you to practice concepts from lecture.
 
 Assignments will be posted Saturdays and due Friday before midnight.  You are
 strongly encouraged to start early so that you can ask questions. See the
 syllabus for links to the assignments.
 
-You will submit your assignments electronically using link:www.dropbox.com[Dropbox]. 
+You will submit your assignments electronically using git.
 
