--- a/schedule.adoc
+++ b/schedule.adoc
@@ -1,5 +1,3 @@
-
-
 [cols="1,2,6a", options="header"]
 |===
 | Week 
@@ -8,141 +6,143 @@
 
 //-----------------------------
 | 1
-| Jan 18 anchor:week01[]
+| September 3, 5 anchor:week01[]
 | *Introductions, Hello C* 
 
-* Read: link:https://diveintosystems.org/singlepage/[Appendix 1] 
+* Read: link:https://diveintosystems.org/singlepage/#_appendix_1_chapter_1_for_java_programmers[Chapter 1: From JAVA to C] 
 * link:http://linuxcommand.org/lc3_learning_the_shell.php[Learning the shell]
 * Topics: Programming at the command line, Makefiles, From Java to C 
-
-//-----------------------------
-| 2 
-| Jan 23,25 anchor:week02[]
-| *More C, Introduction to Pointers* 
-
-* Topics: Function stacks, scope 
-* link:assts/asst01.html[Assignment 01]: Due Jan 25
-* Read: link:https://diveintosystems.org/singlepage/[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
-* link:https://pythontutor.com/c.html#mode=edit[C Tutor]
+* link:assts/asst01.html[Assignment 01]: Due Sept 6
 * Lab: SSH and Github setup
-
-//-----------------------------
-|3
-|Jan 30, Feb 1 anchor:week03[]
-|*Pointers, malloc/free* 
-
-* Topics: Heap, dynamically-allocated memory (malloc, free), More arrays
-* link:assts/asst02.html[Assignment 02]: Feb 1
-* Read: link:https://diveintosystems.org/singlepage/[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
-* Lab: Quiz 01 practice, link:studyguide1.html[Study Guide]
 // TODO * link:https://github.com/BrynMawr-CS223-F22/git-workshop[Github workshop] and link:https://github.com/BrynMawr-CS223-S22/git-workshop/blob/main/SSHSetup.md[Setting up SSH keys for Github]
 
 //-----------------------------
+| 2 
+| Sept 10, 12 anchor:week02[]
+| *More C, Introduction to Pointers* 
+
+* Topics: Function stacks, scope 
+* Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
+* link:https://pythontutor.com/c.html#mode=edit[C Tutor]
+* Lab Sept 12: Quiz 01 practice, link:studyguide1.html[Study Guide: Quiz 01]
+* link:assts/asst02.html[Assignment 02]: Sept 12
+
+//-----------------------------
+|3
+|Sept 17, 19 anchor:week03[]
+|*Pointers, malloc/free* 
+
+* Topics: Heap, dynamically-allocated memory (malloc, free), More arrays
+* Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
+* Lab Sept 19: **Quiz 01** 
+* link:assts/asst03.html[Assignment 03]: Due Feb 8
+
+//-----------------------------
 |4
-|Feb 6,8 anchor:week04[]
+|Sept 24, 26 anchor:week04[]
 |*Pointer-based data structures. Debugging.* 
 
 * Topics: Linked lists in C. GDB, Valgrind
-* link:assts/asst03.html[Assignment 03]: Due Feb 8
-* Read: link:https://diveintosystems.org/singlepage/[Sections 3.1-3.3] 
+* Read: link:https://diveintosystems.org/singlepage/#_c_debugging_tools[Sections 3.1-3.3] 
 * Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
-* Lab: **Code Jam 01**, link:studyguide1.html[Study Guide]
+* Sept 26 Lab: Quiz 02 Practice, link:studyguide2.html[Study Guide: Quiz 02]
 
 //-----------------------------
 |5
-|Feb 13,15 anchor:week05[]
+|Oct 1,3 anchor:week05[]
 |*Binary and Data Representation I* 
 
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 4.1-4.3] 
-* link:assts/asst04.html[Assignment 04]: Due Feb 15
-* Lab: **Jam Redux 01; Study Guide 02**
+* Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.3] 
+* link:assts/asst04.html[Assignment 04]: 
+* Lab Oct 3:  **Quiz 02**
 
 //-----------------------------
 |6
-|Feb 20,22 anchor:week06[]
-|*Binary and Data Representation II* 
+|Oct 8, 10 anchor:week06[]
+|*Binary and Data Representation II, Intro to Assembly* 
 
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 4.4-4.9] 
-* Read: link:https://diveintosystems.org/singlepage/[Section 5.1, Chapter 6] 
-* link:assts/asst05.html[Assignment 05]: Due Feb 22 
-* Lab: **Code Jam 02**, link:studyguide2.html[Study Guide 2]
+* Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.4-4.9] 
+* Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
+* Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
+* link:assts/asst05.html[Assignment 05]: 
+* Lab Oct 10: Practice Quiz 03, link:studyguide3.html[Study Guide 3]
 
 //-----------------------------
 |7
-|Feb 27, March 1 anchor:week07[]
-|*Computer architecture, Assembly* 
-
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
-* link:assts/asst06.html[Assignment 06]: Due March 1 
-* Lab: **Jam 02 Redux; Study Guide 03** link:studyguide3.html[Study Guide 3]
-
-//-----------------------------
-|8
-|March 6,8 anchor:week08[]
-|*Spring Break*
+|Oct 16,19 anchor:week08[]
+|*Fall Break*
 
 * *NO LECTURES, LABS, HOMEWORKS*
 
 //-----------------------------
+|8
+|Oct 22, 24 anchor:week07[]
+|*Assembly* 
+
+* Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
+* link:assts/asst06.html[Assignment 06]: 
+* Lab: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
+
+//-----------------------------
 |9
-|March 13,15 anchor:week09[]
+|Oct 29,31 anchor:week09[]
 |*The operating system, Processes* 
 
-* link:assts/asst07.html[Assignment 07]: Due March 15 **Hardcopy due at Park 200B**
-* Lab: **Study Guide 03** link:studyguide3.html[Study Guide 3]
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 13, skip section 13.3] 
+* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
+* link:assts/asst07.html[Assignment 07]: Due TODO **Hardcopy due at Park 200B**
+* Lab: 
 
 //-----------------------------
 |10
-|March 20, 22 anchor:week10[]
-|*Processes and Inter-process communication (IPC)* 
+|Nov 5, 7 anchor:week10[]
+|*Threads I* 
 
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 13.4-13.6] 
-* link:assts/asst08-1.html[Assignment 08,Part I]: Due March 22
-* Lab: **Quiz 03**
+* Nov 5: NO CLASS. ELECTION Day
+* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13.4-13.6] 
+* Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
+* link:assts/TODO.html[Assignment 08]: Due 
+* Lab: 
 
 //-----------------------------
 |11
-|March 27,29 anchor:week11[]
-|*Threads I* 
+|Nov 12, 14 anchor:week11[]
+|*Threads II* 
 
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 14] 
-* link:assts/asst08-2.html[Assignment 08,Part II]: Due March 29
-* Lab: **Study Guide 04**: link:studyguide4.html[Study Guide 4]
+* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
+* link:assts/TODO.html[Assignment 09]: Due 
+* Lab: link:studyguide4.html[Study Guide 4]
 
 //-----------------------------
 |12
-|April 3,5 anchor:week12[]
-|*Threads II* 
+|Nov 19,21 anchor:week12[]
+|*Threads III* 
 
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 14] 
-* link:assts/asst09-1.html[Assignment 09, Part I]: Due April 5
+* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
+* link:assts/TODO.html[Assignment 10, Part I]: Due 
 * Lab: **Quiz 04**
 
 //-----------------------------
 |13
-|April 10,12 anchor:week13[]
-|*Memory* 
+|Nov 26 anchor:week13[]
+|*Threads IV* 
 
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 11.1-11.3] 
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 11.5, Malloc Handout] 
-* Read: link:https://diveintosystems.org/singlepage/[Section 2.9.5] 
-* link:assts/asst09-2.html[Assignment 09, Part II]: Due April 12
-* **Jam 05 Study Guide**: link:studyguide5.html[Study Guide 5]
+* Nov 28: Thanksgiving, NO CLASS
+* link:assts/TODO.html[Assignment 10, Part II]: Due 
 
 //-----------------------------
 |14
-|April 17 anchor:week14[]
+|Dec 3,5 anchor:week14[]
 |*Memory, Code optimization* 
 
 * *No Class April 19th!*
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 12] 
+* Read: link:https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy[Chapter 11.1-11.3] 
+* Read: link:https://diveintosystems.org/singlepage/#_code_optimization[Chapter 12] 
 * link:assts/asst10.html[Assignment 10]: Due April 19
-* **Jam 06 Study Guide**: link:studyguide6.html[Study Guide 6]
+* 
 
 //-----------------------------
 |15
-|April 24,26 anchor:week15[]
+|Dec 10,12 anchor:week15[]
 |*C++* 
 
 * Lab: **Quiz05**, April 24th (link:studyguide5.html[Study Guide 5], link:studyguide6.html[Study Guide 6])
