--- a/assts/asst09-2.adoc
+++ b/assts/asst09-2.adoc
@@ -9,7 +9,7 @@ include::header.adoc[]
 
 = {title}
 
-*Due Wednesday, April 12th, before midnight*
+//*Due Wednesday, April 12th, before midnight*
 
 The goals for this assignment are:
 
