--- a/assts/asst10.adoc
+++ b/assts/asst10.adoc
@@ -9,7 +9,7 @@ include::header.adoc[]
 
 = {title}
 
-Due Wednesday, April 19th, before midnight
+// Due Wednesday, April 19th, before midnight
 
 The goals for this assignment are:
 
