--- a/schedule.adoc
+++ b/schedule.adoc
@@ -9,9 +9,9 @@
 | September 3, 5 anchor:week01[]
 | *Introductions, Hello C* 
 
+* Topics: Programming at the command line, Makefiles, From Java to C 
 * Read: link:https://diveintosystems.org/singlepage/#_appendix_1_chapter_1_for_java_programmers[Chapter 1: From JAVA to C] 
 * link:http://linuxcommand.org/lc3_learning_the_shell.php[Learning the shell]
-* Topics: Programming at the command line, Makefiles, From Java to C 
 * link:assts/asst01.html[Assignment 01]: Due Sept 6
 * Lab: SSH and Github setup
 // TODO * link:https://github.com/BrynMawr-CS223-F22/git-workshop[Github workshop] and link:https://github.com/BrynMawr-CS223-S22/git-workshop/blob/main/SSHSetup.md[Setting up SSH keys for Github]
@@ -35,7 +35,7 @@
 * Topics: Heap, dynamically-allocated memory (malloc, free), More arrays
 * Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
 * Lab Sept 19: **Quiz 01** 
-* link:assts/asst03.html[Assignment 03]: Due Feb 8
+* link:assts/asst03.html[Assignment 03]: Due September 19
 
 //-----------------------------
 |4
@@ -46,6 +46,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_c_debugging_tools[Sections 3.1-3.3] 
 * Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
 * Sept 26 Lab: Quiz 02 Practice, link:studyguide2.html[Study Guide: Quiz 02]
+* link:assts/asst04.html[Assignment 04]: Due September 26
 
 //-----------------------------
 |5
@@ -53,7 +54,7 @@
 |*Binary and Data Representation I* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.3] 
-* link:assts/asst04.html[Assignment 04]: 
+* link:assts/asst05.html[Assignment 05]: Due Oct 3
 * Lab Oct 3:  **Quiz 02**
 
 //-----------------------------
@@ -64,7 +65,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.4-4.9] 
 * Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
 * Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
-* link:assts/asst05.html[Assignment 05]: 
+* link:assts/asst06.html[Assignment 06]: Due Oct 10
 * Lab Oct 10: Practice Quiz 03, link:studyguide3.html[Study Guide 3]
 
 //-----------------------------
@@ -80,8 +81,8 @@
 |*Assembly* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
-* link:assts/asst06.html[Assignment 06]: 
-* Lab: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
+* link:assts/asst07.html[Assignment 07]: Due Oct 24
+* Lab Oct 24: **Quiz 03**
 
 //-----------------------------
 |9
@@ -89,8 +90,8 @@
 |*The operating system, Processes* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
-* link:assts/asst07.html[Assignment 07]: Due TODO **Hardcopy due at Park 200B**
-* Lab: 
+* link:assts/asst08.html[Assignment 08]: Due Oct 31 **Hardcopy due at Park 200B**
+* Lab: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
 
 //-----------------------------
 |10
@@ -100,8 +101,8 @@
 * Nov 5: NO CLASS. ELECTION Day
 * Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13.4-13.6] 
 * Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
-* link:assts/TODO.html[Assignment 08]: Due 
-* Lab: 
+* link:assts/TODO.html[Assignment 09]: Due Nov 7
+* Lab:  **Quiz 04**
 
 //-----------------------------
 |11
@@ -109,17 +110,18 @@
 |*Threads II* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/TODO.html[Assignment 09]: Due 
-* Lab: link:studyguide4.html[Study Guide 4]
+* link:assts/TODO.html[Assignment 10]: Due Nov 14th
+* Lab: Quiz Practice, link:studyguide5.html[Study Guide 5]
 
 //-----------------------------
 |12
 |Nov 19,21 anchor:week12[]
 |*Threads III* 
 
+* Nov 21, NO CLASS
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/TODO.html[Assignment 10, Part I]: Due 
-* Lab: **Quiz 04**
+* link:assts/TODO.html[Assignment 11]: Due Nov 21
+* Lab: **Quiz 05**
 
 //-----------------------------
 |13
@@ -127,26 +129,23 @@
 |*Threads IV* 
 
 * Nov 28: Thanksgiving, NO CLASS
-* link:assts/TODO.html[Assignment 10, Part II]: Due 
 
 //-----------------------------
 |14
 |Dec 3,5 anchor:week14[]
 |*Memory, Code optimization* 
 
-* *No Class April 19th!*
 * Read: link:https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy[Chapter 11.1-11.3] 
 * Read: link:https://diveintosystems.org/singlepage/#_code_optimization[Chapter 12] 
-* link:assts/asst10.html[Assignment 10]: Due April 19
-* 
+* link:assts/asst12.html[Assignment 12]: Due Dec 5
+* Lab Dec 5, Final Practice, link:studyguide-final.html[Final Study Guide]
 
 //-----------------------------
 |15
 |Dec 10,12 anchor:week15[]
 |*C++* 
 
-* Lab: **Quiz05**, April 24th (link:studyguide5.html[Study Guide 5], link:studyguide6.html[Study Guide 6])
-* link:studyguide-final.html[Final Study Guide]
+* Lab Dec 5, Final Practice, link:studyguide-final.html[Final Study Guide]
 
 |===
 
